# ForceInferencePy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DELIVERABLES.md  LABEL_DRIVEN_TOPOLOGY_README.md  LICENSE  QUICK_START.md  README.md  demo_cellpose_pipeline.py  geometry_patched.py  pyproject.toml  segmentation_cellpose.py
.claude/: settings.local.json
.github/workflows/: ci.yml  tests.yml
data/: example.tif  test.tif
diagnosis/: diag_pipeline_stages.py  diag_problem_map.py  diag_solver.py  diag_twin_junctions.py  split_four_way_old.py  split_fourway.py  split_vertices.py  topocheck.py  verify_correction.py
examples/: check_topology.py  compare_interfaces.py  compare_methods.py  demo_25d_stack.py  demo_2d_bayesian.py  demo_laplace.py  demo_stress_analysis.py  demo_timeseries.py  diagnose_junctions.py  diagnose_tif_vs_jpg.py  quickstart.py  test_junction_detection.py  test_topology.py  topocheck.py  verify_correction.py
force_inference/: __init__.py  core.py  geometry.py  segmentation.py  solvers.py  split_four_way.py  timeseries.py  topology.py  topology_label.py  visualization.py
scripts/: generate_portfolio_poster_landscape.py  generate_portfolio_poster_svg.py  generate_readme_assets.py  portfolio_overview.py
tests/: conftest.py  test_core.py  test_geometry.py  test_label_topology.py  test_label_topology_simple.py  test_segmentation.py  test_solvers.py  test_split_four_way.py
