[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "force_inference"
version = "0.1.0"
description = "A robust Python package for force inference in 2D and 2.5D tissues."
readme = "README.md"
authors = [
    {name = "Wei-Yuan Kong", email = "weiyuankong@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-image",
]

[project.optional-dependencies]
cellpose = [
    "cellpose",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["force_inference"]

[project.urls]
"Homepage" = "https://github.com/weiyuankong/ForceInferencePy"
"Bug Tracker" = "https://github.com/weiyuankong/ForceInferencePy/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py38"
